--- a/my-aktion/src/main/webapp/WEB-INF/templates/default.xhtml
+++ b/my-aktion/src/main/webapp/WEB-INF/templates/default.xhtml
@@ -10,11 +10,10 @@
 </h:head>
 <h:body>
 	<div id="container">
+		<div id="header">
+			<p><b>My-Aktion</b> - Beispielanwendung für den JEE6-Webprofile Workshop</p>
+		</div>
 		<div id="content">
-			<div id="sidebar">
-				<h3>My-Aktion</h3>
-				<p>Beispielanwendung für den JEE6-Webprofile Workshop</p>
-			</div>
 			<ui:insert name="content">
                     [Template content will be inserted here]
             </ui:insert>
