Header und Footer im JSF-Template aktualisiert

--- a/my-aktion/src/main/webapp/WEB-INF/templates/default.xhtml
+++ b/my-aktion/src/main/webapp/WEB-INF/templates/default.xhtml
@@ -11,7 +11,7 @@
 <h:body>
 	<div id="container">
 		<div id="header">
-			<p><b>My-Aktion</b> - Beispielanwendung für den JEE6-Webprofile Workshop</p>
+			<p>Beispielanwendung <b>My-Aktion</b> – Workshop Java EE 7</p>
 		</div>
 		<div id="content">
 			<ui:insert name="content">
@@ -19,7 +19,7 @@
             </ui:insert>
 		</div>
 		<div id="footer">
-			<p>(C) 2012 dpunkt Verlag. APL</p>
+			<p> (C) 2013  dpunkt.verlag GmbH, MIT Lizenz</p>
 		</div>
 	</div>
 </h:body>
